Resolved the bug of Overlapping padding, Updated about-image, Added hover functionality to the about-image

--- a/style.css
+++ b/style.css
@@ -227,16 +227,28 @@ header .navbar {
 	justify-content: space-between;
 }
 
-.about-section .about-image-wrapper .about-image {
+.about-section .about-image-wrapper {
+	overflow: hidden;
+
 	width: 400px;
 	height: 400px;
 	object-fit: cover;
 	border-radius: var(--border-radius-circle);
 }
 
+.about-section .about-image-wrapper .about-image {
+	width: 100%;
+	height: 100%;
+	cursor: zoom-in;
+	transition: 0.3s ease;
+}
+
+.about-section .about-image-wrapper:hover .about-image {
+	transform: translate(0%, 10%) scale(2.1);
+}
+
 .about-section .about-details .section-title {
 	padding: 0;
-
 }
 
 .about-section .about-details {
@@ -591,10 +603,10 @@ header .navbar {
 		flex-direction: column-reverse;
 	}
 
-	.about-section .about-image-wrapper .about-image {
+	.about-section .about-image-wrapper {
 		width: 100%;
 		height: 100%;
-		max-width: 250px;
+		max-width: 80%;
 		aspect-ratio: 1;
 	}
 
